// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar/Lines chart - Simple day 1`] = `
Object {
  "data": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "03/07",
        "value": 0,
      },
      Object {
        "key": "04/07",
        "value": 0,
      },
      Object {
        "key": "05/07",
        "value": 0,
      },
      Object {
        "key": "06/07",
        "value": 0,
      },
      Object {
        "key": "07/07",
        "value": 0,
      },
      Object {
        "key": "08/07",
        "value": 0,
      },
      Object {
        "key": "09/07",
        "value": 0,
      },
      Object {
        "key": "10/07",
        "value": 0,
      },
      Object {
        "key": "11/07",
        "value": 0,
      },
      Object {
        "key": "12/07",
        "value": 0,
      },
      Object {
        "key": "13/07",
        "value": 0,
      },
      Object {
        "key": "14/07",
        "value": 0,
      },
      Object {
        "key": "15/07",
        "value": 0,
      },
      Object {
        "key": "16/07",
        "value": 0,
      },
      Object {
        "key": "17/07",
        "value": 0,
      },
      Object {
        "key": "18/07",
        "value": 0,
      },
      Object {
        "key": "19/07",
        "value": 0,
      },
      Object {
        "key": "20/07",
        "value": 0,
      },
      Object {
        "key": "21/07",
        "value": 0,
      },
      Object {
        "key": "22/07",
        "value": 0,
      },
      Object {
        "key": "23/07",
        "value": 0,
      },
      Object {
        "key": "24/07",
        "value": 0,
      },
      Object {
        "key": "25/07",
        "value": 0,
      },
      Object {
        "key": "26/07",
        "value": 0,
      },
      Object {
        "key": "27/07",
        "value": 0,
      },
      Object {
        "key": "28/07",
        "value": 0,
      },
      Object {
        "key": "29/07",
        "value": 0,
      },
      Object {
        "key": "30/07",
        "value": 0,
      },
      Object {
        "key": "31/07",
        "value": 0,
      },
      Object {
        "key": "01/08",
        "value": 0,
      },
    ],
  },
}
`;

exports[`Bar/Lines chart - Simple month 1`] = `
Object {
  "data": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "Sep",
        "value": 0,
      },
      Object {
        "key": "Oct",
        "value": 0,
      },
      Object {
        "key": "Nov",
        "value": 0,
      },
      Object {
        "key": "Dec",
        "value": 0,
      },
      Object {
        "key": "Jan",
        "value": 0,
      },
      Object {
        "key": "Feb",
        "value": 0,
      },
      Object {
        "key": "Mar",
        "value": 0,
      },
      Object {
        "key": "Apr",
        "value": 2,
      },
      Object {
        "key": "May",
        "value": 0,
      },
      Object {
        "key": "Jun",
        "value": 0,
      },
      Object {
        "key": "Jul",
        "value": 0,
      },
      Object {
        "key": "Aug",
        "value": 0,
      },
    ],
  },
}
`;

exports[`Bar/Lines chart - Simple week 1`] = `
Object {
  "data": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "07/02",
        "value": 0,
      },
      Object {
        "key": "14/02",
        "value": 0,
      },
      Object {
        "key": "21/02",
        "value": 0,
      },
      Object {
        "key": "28/02",
        "value": 0,
      },
      Object {
        "key": "07/03",
        "value": 0,
      },
      Object {
        "key": "14/03",
        "value": 0,
      },
      Object {
        "key": "21/03",
        "value": 0,
      },
      Object {
        "key": "28/03",
        "value": 0,
      },
      Object {
        "key": "04/04",
        "value": 2,
      },
      Object {
        "key": "11/04",
        "value": 0,
      },
      Object {
        "key": "18/04",
        "value": 0,
      },
      Object {
        "key": "25/04",
        "value": 0,
      },
      Object {
        "key": "02/05",
        "value": 0,
      },
      Object {
        "key": "09/05",
        "value": 0,
      },
      Object {
        "key": "16/05",
        "value": 0,
      },
      Object {
        "key": "23/05",
        "value": 0,
      },
      Object {
        "key": "30/05",
        "value": 0,
      },
      Object {
        "key": "06/06",
        "value": 0,
      },
      Object {
        "key": "13/06",
        "value": 0,
      },
      Object {
        "key": "20/06",
        "value": 0,
      },
      Object {
        "key": "27/06",
        "value": 0,
      },
      Object {
        "key": "04/07",
        "value": 0,
      },
      Object {
        "key": "11/07",
        "value": 0,
      },
      Object {
        "key": "18/07",
        "value": 0,
      },
      Object {
        "key": "25/07",
        "value": 0,
      },
      Object {
        "key": "01/08",
        "value": 0,
      },
    ],
  },
}
`;

exports[`Bar/Lines chart - Simple year 1`] = `
Object {
  "data": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "2014",
        "value": 0,
      },
      Object {
        "key": "2015",
        "value": 0,
      },
      Object {
        "key": "2016",
        "value": 0,
      },
      Object {
        "key": "2017",
        "value": 0,
      },
      Object {
        "key": "2018",
        "value": 0,
      },
      Object {
        "key": "2019",
        "value": 0,
      },
      Object {
        "key": "2020",
        "value": 0,
      },
      Object {
        "key": "2021",
        "value": 2,
      },
    ],
  },
}
`;

exports[`Pie chart - Count 1`] = `
Object {
  "data": Array [
    Object {
      "key": 4,
      "value": 1,
    },
    Object {
      "key": 5,
      "value": 1,
    },
  ],
}
`;
